<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.service.hearstore.data.model.HeartModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/heartItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="8dp">

        <!-- Using a linear layout because it provides a more uniform look since we are  looping through variable data to display on the screen-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/heart_name" />
            <TextView
                android:id="@+id/heart_name"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:hint="@string/heart_name_hint"
                android:text="@{item.name}"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/company_name" />
            <TextView
                android:id="@+id/company_name"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:hint="@string/company_name_hint"
                android:text="@{item.company}"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/heart_size" />
            <TextView
                android:id="@+id/heart_size"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:hint="@string/heart_size_hint"
                android:text="@{item.size}"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint" />
                    android:text="@{item.description}"
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>